Fix the column width issue described in comment 32 of issue 878. The word wrap of the file path was also fixed.

--- a/gbif-ipt/src/main/webapp/styles/main.css
+++ b/gbif-ipt/src/main/webapp/styles/main.css
@@ -709,7 +709,7 @@ table#source-properties th {
 	font-weight: bold;
 }
 table#source-properties td {
-  width: 360px;
+  max-width: 350px;
   word-wrap: break-word;
 }
 .detailsSource {
